--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,31 @@ env:
     - CONAN_REFERENCE="libusb/1.0.21"
     - CONAN_USERNAME="uilianries"
     - CONAN_CHANNEL="ci"
-    - CONAN_TOTAL_PAGES=1
+    - CONAN_TOTAL_PAGES=2
     - CONAN_CURRENT_PAGE=1
     - CONAN_STABLE_BRANCH_PATTERN="release/*"
 
   matrix:
-    - CONAN_GCC_VERSIONS=4.6 CONAN_USE_DOCKER=1
-    - CONAN_GCC_VERSIONS=4.8 CONAN_USE_DOCKER=1
-    - CONAN_GCC_VERSIONS=4.9 CONAN_USE_DOCKER=1
-    - CONAN_GCC_VERSIONS=5.2 CONAN_USE_DOCKER=1
-    - CONAN_GCC_VERSIONS=5.3 CONAN_USE_DOCKER=1
-    - CONAN_GCC_VERSIONS=6.2 CONAN_USE_DOCKER=1
-    - CONAN_GCC_VERSIONS=6.3 CONAN_USE_DOCKER=1
+    - CONAN_GCC_VERSIONS=4.6 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=4.6 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+
+    - CONAN_GCC_VERSIONS=4.8 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=4.8 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+
+    - CONAN_GCC_VERSIONS=4.9 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=4.9 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+
+    - CONAN_GCC_VERSIONS=5.2 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=5.2 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+
+    - CONAN_GCC_VERSIONS=5.3 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=5.3 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+
+    - CONAN_GCC_VERSIONS=6.2 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=6.2 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+
+    - CONAN_GCC_VERSIONS=6.3 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=6.3 CONAN_CURRENT_PAGE=2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
 
 install:
   - ./.travis/install.sh
