Shared library option
- Added shared option
- Using new Conan script stuffs

Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,18 +1,21 @@
-PROJECT(conan-libusb-test)
 cmake_minimum_required(VERSION 2.8)
+project(conan-libusb-test)
 
-set(CMAKE_VERBOSE_MAKEFILE 1)
+set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
-# Conan package ###########################################
+# Conan package ################################################################
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
+# Source files #################################################################
+file(GLOB SOURCE_FILES src/*.c)
+
 # Build application #######################################
-add_executable(${PROJECT_NAME} testlibusb.c)
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
 
-# Add test ################################################
+# Add test #####################################################################
 enable_testing()
-add_test(NAME check
+add_test(NAME test-all
          WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
          COMMAND ${PROJECT_NAME})
