--- a/.travis.yml
+++ b/.travis.yml
@@ -14,32 +14,22 @@ env:
     - CONAN_STABLE_BRANCH_PATTERN="release/*"
 
   matrix:
-    - CONAN_GCC_VERSIONS=4.1 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_DOCKER_IMAGE=uilianries/conangcc41 CONAN_ARCHS=x86    CONAN_GCC_VERSIONS="4.1"
-    - CONAN_GCC_VERSIONS=4.1 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_DOCKER_IMAGE=uilianries/conangcc41 CONAN_ARCHS=x86_64 CONAN_GCC_VERSIONS="4.1"
-
-    - CONAN_GCC_VERSIONS=4.6 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
-    - CONAN_GCC_VERSIONS=4.6 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
-
-    - CONAN_GCC_VERSIONS=4.8 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
-    - CONAN_GCC_VERSIONS=4.8 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
-
-    - CONAN_GCC_VERSIONS=4.9 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
-    - CONAN_GCC_VERSIONS=4.9 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
-
-    - CONAN_GCC_VERSIONS=5.2 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
-    - CONAN_GCC_VERSIONS=5.2 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
-
-    - CONAN_GCC_VERSIONS=5.3 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
-    - CONAN_GCC_VERSIONS=5.3 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
-
-    - CONAN_GCC_VERSIONS=5.4 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
-    - CONAN_GCC_VERSIONS=5.4 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
-
-    - CONAN_GCC_VERSIONS=6.2 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
-    - CONAN_GCC_VERSIONS=6.2 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
-
-    - CONAN_GCC_VERSIONS=6.3 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
-    - CONAN_GCC_VERSIONS=6.3 CONAN_CURRENT_PAGE=1 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+    - CONAN_GCC_VERSIONS=4.6 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+    - CONAN_GCC_VERSIONS=4.6 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=4.8 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+    - CONAN_GCC_VERSIONS=4.8 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=4.9 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+    - CONAN_GCC_VERSIONS=4.9 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=5.2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+    - CONAN_GCC_VERSIONS=5.2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=5.3 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+    - CONAN_GCC_VERSIONS=5.3 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=5.4 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+    - CONAN_GCC_VERSIONS=5.4 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=6.2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+    - CONAN_GCC_VERSIONS=6.2 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
+    - CONAN_GCC_VERSIONS=6.3 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86_64
+    - CONAN_GCC_VERSIONS=6.3 CONAN_USE_DOCKER=1 CONAN_ARCHS=x86
 
 install:
   - ./.travis/install.sh
