--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,26 +1,28 @@
 build: false
+
 environment:
     PYTHON: "C:\\Python27"
     PYTHON_VERSION: "2.7.8"
     PYTHON_ARCH: "32"
 
-    CONAN_UPLOAD: 1
     CONAN_REFERENCE: "libusb/1.0.21"
-    CONAN_USERNAME: "uilianries"
-    CONAN_CHANNEL: "ci"
-    CONAN_TOTAL_PAGES: 4
+    VS150COMNTOOLS: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\Common7\\Tools\\"
     CONAN_STABLE_BRANCH_PATTERN: "release/*"
-    CONAN_VISUAL_VERSIONS: 11
 
     matrix:
-        - CONAN_CURRENT_PAGE: 1
-        - CONAN_CURRENT_PAGE: 2
-        - CONAN_CURRENT_PAGE: 3
-        - CONAN_CURRENT_PAGE: 4
+        - MINGW_CONFIGURATIONS: "4.9@x86_64@seh@posix, 4.9@x86_64@sjlj@posix, 4.9@x86@sjlj@posix, 4.9@x86@dwarf2@posix"
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CONAN_VISUAL_VERSIONS: 12
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CONAN_VISUAL_VERSIONS: 14
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CONAN_VISUAL_VERSIONS: 15
 
 install:
-  - set PATH=%PATH%;%PYTHON%/Scripts/;C:\cygwin\bin
-  - pip.exe install --upgrade conan conan_package_tools
-  - conan user
+  - set PATH=%PATH%;%PYTHON%/Scripts/
+  - pip.exe install conan --upgrade
+  - pip.exe install conan_package_tools
+  - conan user # It creates the conan data directory
+
 test_script:
   - python build.py
