#3 Build shared and static on Windows
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -7,17 +7,16 @@ set(CMAKE_VERBOSE_MAKEFILE TRUE)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-# Load libusb module ##########################################################
-include(${CMAKE_BINARY_DIR}/FindLibusb1.cmake)
-find_package(Libusb1 REQUIRED)
+# Load libusb module ###########################################################
+find_package(LIBUSB REQUIRED)
 
 # Source files #################################################################
 file(GLOB SOURCE_FILES src/*.c)
 
-# Build application #######################################
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 99)
-target_link_libraries(${PROJECT_NAME} ${CONAN_LIBS})
+# Build application ############################################################
+add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
+set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY C_STANDARD 99)
+target_link_libraries(${CMAKE_PROJECT_NAME} ${CONAN_LIBS})
 
 # Add test #####################################################################
 enable_testing()
