--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,8 @@ environment:
     CONAN_STABLE_BRANCH_PATTERN: "release/*"
 
     matrix:
-        - MINGW_CONFIGURATIONS: "5.4@x86_64@seh@posix, 5.4@x86_64@sjlj@posix, 5.4@x86@sjlj@posix, 5.4@x86@dwarf2@posix"
+        - MINGW_CONFIGURATIONS: "5.4@x86_64@seh@posix"
+          CONAN_BASH_PATH: "c:\\msys64\\usr\\bin\\bash"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 12
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
@@ -19,7 +20,7 @@ environment:
           CONAN_VISUAL_VERSIONS: 15
 
 install:
-  - set PATH=%PATH%;%PYTHON%/Scripts/;C:\msys64\usr\bin\
+  - set PATH=%PATH%;%PYTHON%/Scripts/
   - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools
   - conan user # It creates the conan data directory
