--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-project(conan-libusb-test)
+project(test_package)
 
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
@@ -7,16 +7,7 @@ set(CMAKE_VERBOSE_MAKEFILE TRUE)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-# Source files #################################################################
-file(GLOB SOURCE_FILES src/*.c)
-
 # Build application ############################################################
-add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
+add_executable(${CMAKE_PROJECT_NAME} test_package.c)
 set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY C_STANDARD 99)
 target_link_libraries(${CMAKE_PROJECT_NAME} ${CONAN_LIBS})
-
-# Add test #####################################################################
-enable_testing()
-add_test(NAME test-all
-         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
-         COMMAND ${PROJECT_NAME})
