--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,7 +30,7 @@ environment:
 
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
-  - pip.exe install conan>=1.0.0b5 --upgrade
+  - pip.exe install conan --upgrade
   - pip.exe install conan_package_tools
   - pip.exe install bincrafters-package-tools
   - conan user # It creates the conan data directory
