--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
     PYTHON_ARCH: "32"
 
     matrix:
-        - MINGW_CONFIGURATIONS: "5.4@x86_64@seh@posix"
+        - MINGW_CONFIGURATIONS: "4.9@x86_64@seh@posix, 5@x86_64@seh@posix, 6@x86_64@seh@posix, 7@x86_64@seh@posix"
           CONAN_BASH_PATH: "c:\\msys64\\usr\\bin\\bash"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
           CONAN_VISUAL_VERSIONS: 12
@@ -30,8 +30,7 @@ environment:
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
   - pip.exe install conan --upgrade
-  - pip.exe install conan_package_tools
-  - pip.exe install bincrafters-package-tools
+  - pip.exe install conan_package_tools bincrafters-package-tools
   - conan user # It creates the conan data directory
 
 test_script:
